--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <link rel="shortcut icon" type="image/png" href="/static/favicon.png"/>
-            <title>setting all up</title>
-         
-    <body>
-       <script src="dist/bundle.js"></script>
-    
 
-    </body>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/png" href="/static/favicon.png" />
+    <title>setting all up</title>
+
+</head>
+
+<body>
+ 
+    <script src="dist/bundle.js"></script>
+
+
+
+</body>
+
 </html>
